--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
 gunicorn = "*"
+dj-database-url = "*"
+whitenoise = "*"
+django-heroku = "*"
 
 [dev-packages]
 
